arreglo num whatsaap

--- a/contacto.html
+++ b/contacto.html
@@ -64,7 +64,7 @@
             </svg>
             <div>
               <h3>WhatsApp</h3>
-              <p><a href="https://wa.me/573505327773" target="_blank">+57 350 532 7773</a></p>
+              <p><a href="https://wa.me/573153339678" target="_blank">+57 3153339678</a></p>
             </div>
           </div>
         </div>
